Fixed Reach Out href and added Resume

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </button>
         </li>
         <li>
-          <a class="header__resume btn" href="#resume">Resume</a>
+          <a class="header__resume btn" download="Lucas-Atala-Resume" href="/Lucas-Atala-Resume.pdf">Resume</a>
         </li>
       </ul>
       <button aria-label="navigation button" class="header__bars">
@@ -86,7 +86,7 @@
       <p class="hero__description">A passionate <strong>front-end/full stack</strong> developer specialized in
         <br />delivering <strong>high quality software</strong> while enjoying teamwork!
       </p>
-      <a class="hero__btn btn" href="#">Reach Out</a>
+      <a class="hero__btn btn" target="_blank" href="mailto:lucas.macias.atala@gmail.com">Reach Out</a>
     </section>
     <section id="about" class="about container section">
       <div class="about__content">
