Added dateTime on footer

--- a/index.html
+++ b/index.html
@@ -126,13 +126,7 @@
       <h3 class="featured__subtitle">Featured projects</h3>
       <div class="featured__wrapper">
         <h2 class="featured__title">Ppro Developer Hub</h2>
-        <a aria-label="link fesatured project" class="featured__link" href="https://developerhub.ppro.com/">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
-            stroke="currentColor">
-            <path strokeLinecap="round" strokeLinejoin="round"
-              d="M13.19 8.688a4.5 4.5 0 0 1 1.242 7.244l-4.5 4.5a4.5 4.5 0 0 1-6.364-6.364l1.757-1.757m13.35-.622 1.757-1.757a4.5 4.5 0 0 0-6.364-6.364l-4.5 4.5a4.5 4.5 0 0 0 1.242 7.244" />
-          </svg>
-        </a>
+          <a class="btn work__project-btn" target="_blank" href="https://developerhub.ppro.com/">Website</a>
       </div>
       <p class="featured__description">Front end development. Migration from Vue 2 to React18+ and
         creation of landing page with Figma in cooperation with UI/UX designer.
@@ -238,7 +232,8 @@
     </section>
   </main>
   <footer class="footer container section">
-    <h3 class="footer__title">~ Lucas Atala ~</h3>
+    <h3 class="footer__title">Thank you for visiting me! </h3>
+    <h4 class="footer__title">Lucas Atala @ <strong class="footer__date"></strong> </h4>
   </footer>
   <script type="module" src="/src/main.js"></script>
 </body>
