Changed profile pictures and footer

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   </main>
   <footer class="footer container section">
     <h3 class="footer__title">Thank you for visiting me! </h3>
-    <h4 class="footer__title">Lucas Atala @ <strong class="footer__date"></strong> </h4>
+    <h4 class="footer__title">Lucas Atala # <strong class="footer__date"></strong> </h4>
   </footer>
   <script type="module" src="/src/main.js"></script>
 </body>
