--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <li class="header__line"></li>
         <li>
           <button aria-label="theme toggle button" id="theme-toggle-web" class="header__icon">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="size-6">
-              <path strokeLinecap="round" strokeLinejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 0 0 1.5-.189m-1.5.189a6.01 6.01 0 0 1-1.5-.189m3.75 7.478a12.06 12.06 0 0 1-4.5 0m3.75 2.383a14.406 14.406 0 0 1-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 1 0-7.517 0c.85.493 1.509 1.333 1.509 2.316V18" />
-            </svg>            
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
+              stroke="currentColor" className="size-6">
+              <path strokeLinecap="round" strokeLinejoin="round"
+                d="M12 18v-5.25m0 0a6.01 6.01 0 0 0 1.5-.189m-1.5.189a6.01 6.01 0 0 1-1.5-.189m3.75 7.478a12.06 12.06 0 0 1-4.5 0m3.75 2.383a14.406 14.406 0 0 1-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 1 0-7.517 0c.85.493 1.509 1.333 1.509 2.316V18" />
+            </svg>
           </button>
         </li>
         <li>
@@ -63,7 +65,8 @@
         </li>
         <li class="mobile-nav__link-line"></li>
         <li>
-          <button aria-label="mobile theme toggle button" id="theme-toggle-mobile" class="mobile-nav__icon">
+          <button type="button" id="theme-toggle-mobile" class="mobile-nav__icon mobile-nav__link"
+            aria-label="mobile theme toggle button">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
               <path
                 d="M12 2.25a.75.75 0 0 1 .75.75v2.25a.75.75 0 0 1-1.5 0V3a.75.75 0 0 1 .75-.75ZM7.5 12a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM18.894 6.166a.75.75 0 0 0-1.06-1.06l-1.591 1.59a.75.75 0 1 0 1.06 1.061l1.591-1.59ZM21.75 12a.75.75 0 0 1-.75.75h-2.25a.75.75 0 0 1 0-1.5H21a.75.75 0 0 1 .75.75ZM17.834 18.894a.75.75 0 0 0 1.06-1.06l-1.59-1.591a.75.75 0 1 0-1.061 1.06l1.59 1.591ZM12 18a.75.75 0 0 1 .75.75V21a.75.75 0 0 1-1.5 0v-2.25A.75.75 0 0 1 12 18ZM7.758 17.303a.75.75 0 0 0-1.061-1.06l-1.591 1.59a.75.75 0 0 0 1.06 1.061l1.591-1.59ZM6 12a.75.75 0 0 1-.75.75H3a.75.75 0 0 1 0-1.5h2.25A.75.75 0 0 1 6 12ZM6.697 7.757a.75.75 0 0 0 1.06-1.06l-1.59-1.591a.75.75 0 0 0-1.061 1.06l1.59 1.591Z" />
@@ -71,7 +74,7 @@
           </button>
         </li>
         <li>
-          <a class="mobile-nav__resume btn" href="#resume">Resume</a>
+          <a class="header__resume btn" download="Lucas-Atala-Resume" href="/Lucas-Atala-Resume.pdf">Resume</a>
         </li>
       </ul>
     </nav>
@@ -93,40 +96,73 @@
         <h2 class="about__title">About</h2>
         <p class="about__description">Hello and thank you for coming by! I'm Luke, a <strong>front-end/full
             stack</strong> developer based in Australia.
-          I start the day with a good mate 🧉 and a bit of exercise 🏃‍♂️ before sitting in front of my computer 🖥️🖱️.
-          After that, I focus on deliver the task remaining with the best approach and under a pomodoro schedule.
+          I start the day with a good mate 🧉 and a bit of exercise 🏃‍♂️ before sitting in front of my computer 🖥️🖱️
+          After that, I focus on delivering the tasks with the best approach and under a Pomodoro schedule.
         </p>
-        <p class="about__description">Teammates from my previous jobs would say that I might be an overthinker and a
-          buffon. I couldn't agree more</p>
-        <p class="about__description">They would also say that we had a great time building solutions togheter, for sure
-        </p>
+        <p class="about__description">Old teammates from previous jobs would say that I might be an overthinker and a
+          comedian. I couldn't agree more. They would also say that we had a great time building solutions togheter, for
+          sure.</p>
         <hr class="about__hr" />
         <h3 class="about__subtitle">Technologies</h3>
-        <div class="about__ul-container">
-          <ul class="about__ul">
-            <li class="about__li">Javascript (ES6+)/Typescript</li>
-            <li class="about__li">Node.Js</li>
-            <li class="about__li">ReactJS (18+)/VueJS 3</li>
-            <li class="about__li">C#/ASP.NET Core 3</li>
-            <li class="about__li">EF Core</li>
-          </ul>
-          <ul class="about__ul">
-            <li class="about__li">PostgreSQL/MongoDB</li>
-            <li class="about__li">AWS/Jira</li>
-            <li class="about__li">Terraform/Github Actions</li>
-            <li class="about__li">CSS3/MUI/TailwindCSS</li>
-          </ul>
+        <div class="about__tech-container">
+          <div class="about__tech-column">
+            <div class="about__tech-box">
+              <img class="about__tech-box-img lazy loading" src="https://fakeimg.pl/32x32" data-src="skills_css.png" />
+              <p class="about__tech-box-text">CSS</p>
+            </div>
+            <div class="about__tech-box">
+              <img class="about__tech-box-img lazy loading" src="https://fakeimg.pl/32x32" data-src="skills_js-ts.png" />
+              <p class="about__tech-box-text">JS / TS</p>
+            </div>
+            <div class="about__tech-box">
+              <img class="about__tech-box-img lazy loading" src="https://fakeimg.pl/32x32" data-src="skills_react.png" />
+              <p class="about__tech-box-text">React</p>
+            </div>
+          </div>
+          <div class="about__tech-column">
+            <div class="about__tech-box">
+              <img class="about__tech-box-img lazy loading" src="https://fakeimg.pl/32x32" data-src="skills_mongo.png" />
+              <p class="about__tech-box-text">Mongo</p>
+            </div>
+            <div class="about__tech-box">
+              <img class="about__tech-box-img lazy loading" src="https://fakeimg.pl/32x32" data-src="skills_postgre.png" />
+              <p class="about__tech-box-text">Postgre</p>
+            </div>
+            <div class="about__tech-box">
+              <img class="about__tech-box-img lazy loading" src="https://fakeimg.pl/32x32" data-src="skills_csharp.png" />
+              <p class="about__tech-box-text">C#</p>
+            </div>
+            <div class="about__tech-box">
+              <img class="about__tech-box-img lazy loading" src="https://fakeimg.pl/32x32" data-src="skills_net.png" />
+              <p class="about__tech-box-text">.Net</p>
+            </div>
+          </div>
+          <div class="about__tech-column">
+            <div class="about__tech-box">
+              <img class="about__tech-box-img lazy loading" src="https://fakeimg.pl/32x32" data-src="skills_node.png" />
+              <p class="about__tech-box-text">Node.Js</p>
+            </div>
+            <div class="about__tech-box">
+              <img class="about__tech-box-img lazy loading" src="https://fakeimg.pl/32x32" data-src="skills_aws.png" />
+              <p class="about__tech-box-text">AWS</p>
+            </div>
+            <div class="about__tech-box">
+              <img class="about__tech-box-img lazy loading" src="https://fakeimg.pl/32x32" data-src="skills_git.png" />
+              <p class="about__tech-box-text">Git</p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="about__img-wrapper">
-        <img  class="about__img lazy loading" src="https://fakeimg.pl/378x475" data-src="/hero_profile.jpeg" alt="Business profile picture">
+        <img class="about__img lazy loading" src="https://fakeimg.pl/378x475" data-src="/hero_profile.jpeg"
+          alt="Business profile picture">
       </div>
     </section>
     <section id="featured" class="featured container section">
       <h3 class="featured__subtitle">Featured projects</h3>
       <div class="featured__wrapper">
         <h2 class="featured__title">Ppro Developer Hub</h2>
-          <a class="btn work__project-btn" target="_blank" href="https://developerhub.ppro.com/">Website</a>
+        <a class="btn work__project-btn" target="_blank" href="https://developerhub.ppro.com/">Website</a>
       </div>
       <p class="featured__description">Front end development. Migration from Vue 2 to React18+ and
         creation of landing page with Figma in cooperation with UI/UX designer.
@@ -153,15 +189,23 @@
         </div>
       </div>
       <div class="featured__img-container">
-        <div class="featured__img-wrapper"><img  class="lazy loading" src="https://fakeimg.pl/1000" data-src="/ppro_web_1.png" alt="ppro project hero" /></div>
-        <div class="featured__img-wrapper"><img  class="lazy loading" src="https://fakeimg.pl/1000" data-src="/ppro_web_2.png" alt="ppro project api" /></div>
-        <div class="featured__img-wrapper"><img  class="lazy loading" src="https://fakeimg.pl/1000" data-src="/ppro_web_3.png" alt="ppro project contact" /></div>
-        <div class="featured__img-wrapper"><img  class="lazy loading" src="https://fakeimg.pl/1000" data-src="/ppro_web_4.png" alt="ppro project documentation" /></div>
-        <div class="featured__img-wrapper"><img  class="lazy loading" src="https://fakeimg.pl/1000" data-src="/ppro_web_5.png" alt="ppro project next documentation page" />
+        <div class="featured__img-wrapper"><img class="lazy loading" src="https://fakeimg.pl/1000"
+            data-src="/ppro_web_1.png" alt="ppro project hero" /></div>
+        <div class="featured__img-wrapper"><img class="lazy loading" src="https://fakeimg.pl/1000"
+            data-src="/ppro_web_2.png" alt="ppro project api" /></div>
+        <div class="featured__img-wrapper"><img class="lazy loading" src="https://fakeimg.pl/1000"
+            data-src="/ppro_web_3.png" alt="ppro project contact" /></div>
+        <div class="featured__img-wrapper"><img class="lazy loading" src="https://fakeimg.pl/1000"
+            data-src="/ppro_web_4.png" alt="ppro project documentation" /></div>
+        <div class="featured__img-wrapper"><img class="lazy loading" src="https://fakeimg.pl/1000"
+            data-src="/ppro_web_5.png" alt="ppro project next documentation page" />
         </div>
-        <div class="featured__img-wrapper"><img  class="lazy loading" src="https://fakeimg.pl/1000" data-src="/ppro_mobile_6.png" alt="ppro project mobile hero" /></div>
-        <div class="featured__img-wrapper"><img  class="lazy loading" src="https://fakeimg.pl/1000" data-src="/ppro_mobile_7.png" alt="ppro project mobile api" /></div>
-        <div class="featured__img-wrapper"><img  class="lazy loading" src="https://fakeimg.pl/1000" data-src="/ppro_mobile_8.png" alt="ppro project mobile contact" /></div>
+        <div class="featured__img-wrapper"><img class="lazy loading" src="https://fakeimg.pl/1000"
+            data-src="/ppro_mobile_6.png" alt="ppro project mobile hero" /></div>
+        <div class="featured__img-wrapper"><img class="lazy loading" src="https://fakeimg.pl/1000"
+            data-src="/ppro_mobile_7.png" alt="ppro project mobile api" /></div>
+        <div class="featured__img-wrapper"><img class="lazy loading" src="https://fakeimg.pl/1000"
+            data-src="/ppro_mobile_8.png" alt="ppro project mobile contact" /></div>
       </div>
     </section>
     <section class="work container section">
@@ -173,8 +217,8 @@
 
       <div class="work__container">
         <h3 class="work__project-title">My Local Foodie</h3>
-        <div class="work__img-wrapper work__image1"><img  class="lazy loading" src="https://fakeimg.pl/1000x1000" data-src="/project_mlf.png"
-            alt="My local foodie web page demo" /></div>
+        <div class="work__img-wrapper work__image1"><img class="lazy loading" src="https://fakeimg.pl/1000x1000"
+            data-src="/project_mlf.png" alt="My local foodie web page demo" /></div>
         <div class="work__project">
           <h3 class="work__project-title-grid">My Local Foodie</h3>
           <p class="work__project-description">Restaurant Manager and Distributors Software. Technologies: Django,
@@ -189,8 +233,8 @@
         </div>
         <!--Project 2 -->
         <h3 class="work__project-title">Alpha Fintech - PPRO</h3>
-        <div class="work__img-wrapper work__image2"><img  class="lazy loading" src="https://fakeimg.pl/1000x1000" data-src="/project_alpha.png"
-            alt="Alpha fintech Hub web page demo" /></div>
+        <div class="work__img-wrapper work__image2"><img class="lazy loading" src="https://fakeimg.pl/1000x1000"
+            data-src="/project_alpha.png" alt="Alpha fintech Hub web page demo" /></div>
         <div class="work__project">
           <h3 class="work__project-title-grid">Alpha Fintech - PPRO</h3>
           <p class="work__project-description">Saas - Payment Gateway. Technologies: ASP.net 4 and Core, React18+/Hooks,
@@ -206,8 +250,8 @@
         </div>
         <!--Project 3 -->
         <h3 class="work__project-title">Wheelsky</h3>
-        <div class="work__img-wrapper work__image3"><img  class="lazy loading" src="https://fakeimg.pl/1000x1000" data-src="/project_wheelsky.png"
-            alt="Wheelsky inline skate web page demo" /></div>
+        <div class="work__img-wrapper work__image3"><img class="lazy loading" src="https://fakeimg.pl/1000x1000"
+            data-src="/project_wheelsky.png" alt="Wheelsky inline skate web page demo" /></div>
         <div class="work__project">
           <h3 class="work__project-title-grid">Wheelsky</h3>
           <p class="work__project-description">Ecommerce solution for inline skates shop. Technologies: React18+, Vite,
@@ -223,17 +267,28 @@
       </div>
     </section>
     <section id="contact" class="contact container section">
-      <h2 class="contact__title">Get In Contact</h2>
+      <h2 class="contact__title">Let's talk business</h2>
       <p class="contact__description">Whether you are starting a project, have business
-        inquiries or just want to say hi, my inbox is always open so feel free to reach out and
+        inquiries or just want to say hi, inbox is always open so feel free to reach out and
         I will get back to you as soon as possible.
       </p>
       <a class="contact_btn btn" target="_blank" href="mailto:lucas.macias.atala@gmail.com">Reach Out</a>
     </section>
   </main>
-  <footer class="footer container section">
-    <h3 class="footer__title">Thank you for visiting me! </h3>
-    <h4 class="footer__title">Lucas Atala # <strong class="footer__date"></strong> </h4>
+  <footer class="footer container section">    
+    <div class="footer__wrapper">
+        <h3 class="footer__title">Thank you for visiting me!</h3>
+        <h3 class="footer__title"> Reach me on Github & Linkedin</h3>
+        <div class="footer__logos">
+          <a class="footer__img" href="https://github.com/LucasDevFoodie" target="_blank">
+            <img src="github-logo.png" alt="Github logo"/>
+          </a>
+          <a class="footer__img" href="https://github.com/LucasDevFoodie" target="_blank">
+            <img src="linkedin-logo.png" alt="Github logo"/>
+          </a>
+        </div>
+        <h4 class="footer__title"><strong id="footer-date"></strong></h4>
+      </div>
   </footer>
   <script type="module" src="/src/main.js"></script>
 </body>
