Added linkedin URL

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           <a class="footer__img" href="https://github.com/LucasDevFoodie" target="_blank">
             <img src="github-logo.png" alt="Github logo"/>
           </a>
-          <a class="footer__img" href="https://github.com/LucasDevFoodie" target="_blank">
+          <a class="footer__img" href="https://www.linkedin.com/in/lucas-atala-99547a307" target="_blank">
             <img src="linkedin-logo.png" alt="Github logo"/>
           </a>
         </div>
