Fixed feature label and linkedin logo

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </p>
       <div class="featured__info-container">
         <div>
-          <h3 class="feature__label">Tech Stack</h3>
+          <h3 class="featured__label">Tech Stack</h3>
           <ul class="featured__tech-stack">
             <li class="featured__info">Javascript/ReactJS</li>
             <li class="featured__info">CSS/TailwindCSS</li>
@@ -179,12 +179,12 @@
           </ul>
         </div>
         <div>
-          <h3 class="feature__label">Project Type</h3>
+          <h3 class="featured__label">Project Type</h3>
           <p class="featured__info">Front-End</p>
           <p class="featured__info">JAMStack</p>
         </div>
         <div>
-          <h3 class="feature__label">Timeline</h3>
+          <h3 class="featured__label">Timeline</h3>
           <p class="featured__info">Mid 2022 to Feb 2023</p>
         </div>
       </div>
@@ -277,8 +277,8 @@
   </main>
   <footer class="footer container section">    
     <div class="footer__wrapper">
-        <h3 class="footer__title">Thank you for visiting me!</h3>
-        <h3 class="footer__title"> Reach me on Github & Linkedin</h3>
+        <h3 class="footer__label">Thank you for visiting me!</h3>
+        <h3 class="footer__label"> Reach me on Github & Linkedin</h3>
         <div class="footer__logos">
           <a class="footer__img lazy loading" href="https://github.com/LucasDevFoodie" target="_blank">
             <img src="github-logo.png" alt="Github logo"/>
