Fixed work section css

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </div>
       <div class="about__img-wrapper">
         <img class="about__img lazy loading" src="https://fakeimg.pl/378x475" data-src="/hero_profile.jpeg"
-          alt="Business profile picture">
+          alt="Business profile picture" />
       </div>
     </section>
     <section id="featured" class="featured container section">
