Fixed work styles

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </svg>
           </a>
         </div>
-        <h4 class="footer__title"><strong id="footer-date"></strong></h4>
+        <h4><strong id="footer-date"></strong></h4>
       </div>
   </footer>
   <script type="module" src="/src/main.js"></script>
