Added AOW project

--- a/index.html
+++ b/index.html
@@ -283,6 +283,19 @@
           <a class="btn work__project-btn" target="_blank"
             href="https://wheelsky.vercel.app/Wheelsky/Welcome">Website</a>
         </div>
+        <!-- Project 4-->
+        <h3 class="work__project-title">Wheelsky</h3>
+        <div class="work__img-wrapper work__image4"><img class="lazy loading" src="https://fakeimg.pl/1000x1000"
+            data-src="/project_AOW.png" alt="AOW web page demo" /></div>
+        <div class="work__project">
+          <h3 class="work__project-title-grid">AOW</h3>
+          <p class="work__project-description">Webpage for Adelaide On Wheels School with Eshop and School details</p>
+          <p class="work__project-details">Fullstack solo development for a inline skate school that required payment
+            methods integration and a responsive design with all the details for the school. The school required a timetable and google maps integration.
+          </p>
+          <a class="btn work__project-btn" target="_blank"
+            href="https://aow-pro.vercel.app/">Website</a>
+        </div>
       </div>
     </section>
     <section id="contact" class="contact container section">
